syntax = "proto3";

import "google/protobuf/empty.proto";

package gameplay_service;

message PlantSeedRequest {
    string userId = 1;
    string inventorySeedId = 2;
    string placedItemTileId = 3;
}